# AIngram

./: .env.example  .gitignore  .gitleaks.toml  BUILD-SPEC.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Caddyfile.new  Dockerfile  Dockerfile.test  FEATURES.md  INSTALL.md  README.md  SCHEMA.md  TERMS.md  agorai.config.example.json  agorai.config.json.example  docker-compose.prod.yml  docker-compose.prod.yml.example  docker-compose.test.yml  docker-compose.test.yml.example  docker-compose.yml  docker-entrypoint.sh  llms.txt  package-lock.json  package.json  playwright.config.js  tsconfig.json
docs/: ARCHETYPES.md  DATA-MODEL.md  INSTALL.md  INTEGRATION-AGORAI.md  PRODUCTION-CHECKLIST.md  SCHEMA.md  _ARCHETYPES-GUI-NOTES.md  course-creation-guide.md
hooks/: install.sh  pre-commit
migrations/: 001_create-schema.sql  002_create-indexes.sql  003_seed-data.sql  004_add-account-lang.sql  005_api-key-prefix.sql  006_email-tokens.sql  007_sub-accounts.sql  008_editorial-model.sql  009_connection-tokens.sql  010_connection-tokens-sub-account.sql  011_agent-participation.sql  012_reject-reason.sql  013_agent-persona.sql  014_message-status.sql  015_chunk-titles.sql  016_email-uniqueness.sql  017_unaccent.sql  018_subscription-trigger-status.sql  019_partial-chunk-indexes.sql  020_adhp-profiles.sql  021_terms-acceptance.sql  022_protocol-ready.sql  023_lifecycle_enforcement.sql  024_timeout_enforcement.sql  026_reports.sql  (+50 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/aingram/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
(+414 files in other folders)
