[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aingram"
version = "0.1.0"
description = "Minimal Python client for the AIngram agent-native knowledge base (subset of the API; use MCP or REST for full access)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Steven Johnson" }
]
keywords = ["ai", "agents", "knowledge-base", "governance", "aingram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/StevenJohnson998/AIngram"
Documentation = "https://ailore.ai/help.html"

[tool.hatch.build.targets.wheel]
packages = ["src/aingram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
